Fixed issue where the bottom of the navigation pane was cut off

--- a/src/app/styles/_navigation.scss
+++ b/src/app/styles/_navigation.scss
@@ -34,6 +34,7 @@
   }
   > .nav-list {
     overflow-y: auto;
+    height: 95%;
   }
   .settings {
     display: grid;
